syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "Protos/common.proto";

option csharp_namespace = "Cynosura.Studio.Web.Protos.Entities";

message Entity {
    string id = 7;
    string name = 1;
    string pluralName = 2;
    string displayName = 3;
    string pluralDisplayName = 4;
    bool isAbstract = 5;
    string baseEntityId = 6;
}

message EntityPageModel {
    repeated Entity pageItems = 1;
    int32 totalItems = 2;
    int32 currentPageIndex = 3;
}